--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="brutal">brutal</string>
     <string name="manic">maniac</string>
     <string name="rules_title">Who Wants To Be A Mirannaire Rules</string>
+    <string name="dev_mode">Enable Dev Mode?</string>
     <string name="rules_message">Each round contains ten multiple choice questions.  Choose the right
         answer for each of them within the allotted time to win.\n\nChoosing a wrong answer or running
         out of time on a question will darken one of the x\'s at the top of the screen.  When all
@@ -16,7 +17,9 @@
         Higher difficulties will naturally have harder questions, but they also have a higher score multiplier.
         Will you risk losing all of your x\'s for a chance at the high score?\n\nOh, and before I go,
         if you manage to reach the end with at least two of your x\'s intact, you\'ll receive a bonus
-        question about yours truly for a chance at even more points!\n~ Campanella</string>
+        question about yours truly for a chance at even more points! It isn\'t easy to get that far, so
+        I will be kind enough to stop the timer if you get there. Maybe you\'ll have a small chance
+        because of it.\n\nMay Aidos be on your side.  You will need her guiding hand.\n~ Campanella</string>
 
     // Strings used for QuestionFragment UI
     <string name="score">score</string>
@@ -24,6 +27,73 @@
     <string name="hint">Enter your response</string>
     <string name="bonus_correct">You got a bonus question correct, that is an extra 1500 points!</string>
     <string name="bonus_wrong">You got a bonus question wrong.  There is no penalty, but you don\'t get any points.</string>
+    <string name="submit">Submit</string>
+
+    // Strings for ResultFragment UI
+    <string name="fail">Are you sure you\'re really a Kiseki fan?  I don\'t know why else you would be here.
+    Try putting some effort into your answers.</string>
+    <string name="semipass">You didn\'t fail, but you didn\'t really do that well either.  Try a little harder
+    or increase the difficulty and maybe you\'ll see some results.</string>
+    <string name="pass">Wow, even I didn\'t know the answers to some of those questions.  You must be
+    a bona-fide Kiseki fan! Maybe you should see if you can conquer Maniac mode.</string>
+    <string name="perfect">You must have put a lot of work in to get this far.  Just sit back and take
+    a second to relax.  You\'ve truly earned it.</string>
+    <string name="resultMessage">You scored a total of %1$d points and achieved a player rank of %2$d!</string>
+    <string-array name="rank_0">
+        <item>Rank</item>
+        <item>Score</item>
+        <item>Prize</item>
+    </string-array>
+    <string-array name="rank_1">
+        <item>1</item>
+        <item>400,000+</item>
+        <item>10,000 mira</item>
+    </string-array>
+    <string-array name="rank_2">
+        <item>2</item>
+        <item>350,000 – 399,999</item>
+        <item>5,000 mira</item>
+    </string-array>
+    <string-array name="rank_3">
+        <item>3</item>
+        <item>300,000 – 349,999</item>
+        <item>4,000 mira</item>
+    </string-array>
+    <string-array name="rank_4">
+        <item>4</item>
+        <item>250,000 – 299,999</item>
+        <item>3,000 mira</item>
+    </string-array>
+    <string-array name="rank_5">
+        <item>5</item>
+        <item>200,000 – 249,999</item>
+        <item>2,000 mira</item>
+    </string-array>
+    <string-array name="rank_6">
+        <item>6</item>
+        <item>150,000 – 199,999</item>
+        <item>1,000 mira</item>
+    </string-array>
+    <string-array name="rank_7">
+        <item>7</item>
+        <item>100,000 – 149,999</item>
+        <item>500 mira</item>
+    </string-array>
+    <string-array name="rank_8">
+        <item>8</item>
+        <item>50,000 – 99,999</item>
+        <item>100 mira</item>
+    </string-array>
+    <string-array name="rank_9">
+        <item>9</item>
+        <item>10,000 – 49,999</item>
+        <item>10 mira</item>
+    </string-array>
+    <string-array name="rank_10">
+        <item>10</item>
+        <item>0 – 9,999</item>
+        <item>1 mira</item>
+    </string-array>
 
     // Quiz questions
     <string name="normal_question_1">What\'s the last name of our ultra-dependable protagonist, Estelle?</string>
@@ -109,7 +179,9 @@
     <string name="bonus_question_1">On the title screen, Campanella has one leg behind the other and one hand behind his back. Which two choices fit those conditions?</string>
     <string name="bonus_question_2">The quiz is almost over, and I feel the host has really gotten to know you. Do you remember his name?</string>
 
-    // Answer Choice arrays  NOTE: Correct answer is always the top.
+    // Answer Choice arrays NOTE: Correct answer is always the top.
+    <string name="bonus_answer_2">Campanella</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="normal_answers_1">
         <item>Bright</item>
         <item>Astray</item>
@@ -596,5 +668,4 @@
         <item>Left Leg</item>
         <item>Right Leg</item>
     </string-array>
-    <string name="bonus_answer_2">Campanella</string>
 </resources>
